# translate-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
src/: config.rs  data.rs  error_handler.rs  event_handler.rs  main.rs  options.rs  setup.rs  translation.rs  webhook.rs
src/commands/: mod.rs  other.rs  owner.rs  translation.rs
